[package]
name = "tetris"
version = "0.1.0"
authors = ["HoodleWoodle <hoodlewoodle@web.de>", "LordArchimonde <qheiler@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.50"
glium = "0.27.0"
image = "0.23.4"
freetype-rs = "0.24.0"
rodio = "0.11.0"